@@ -1,12 +1,12 @@
 -- Autogenerated: do not edit this file
 
-DROP INDEX  INT_MESSAGE_IX1 ;
-DROP INDEX  INT_CHANNEL_MSG_DATE_IDX ;
-DROP INDEX  INT_CHANNEL_MSG_PRIORITY_IDX ;
-DROP TABLE  INT_MESSAGE ;
-DROP TABLE  INT_MESSAGE_GROUP ;
-DROP TABLE  INT_GROUP_TO_MESSAGE ;
-DROP TABLE  INT_LOCK ;
-DROP TABLE  INT_CHANNEL_MESSAGE ;
-DROP TABLE  INT_METADATA_STORE ;
-DROP SEQUENCE INT_MESSAGE_SEQ ;
+DROP INDEX IF EXISTS INT_MESSAGE_IX1 ;
+DROP INDEX IF EXISTS INT_CHANNEL_MSG_DATE_IDX ;
+DROP INDEX IF EXISTS INT_CHANNEL_MSG_PRIORITY_IDX ;
+DROP TABLE IF EXISTS INT_MESSAGE ;
+DROP TABLE IF EXISTS INT_MESSAGE_GROUP ;
+DROP TABLE IF EXISTS INT_GROUP_TO_MESSAGE ;
+DROP TABLE IF EXISTS INT_LOCK ;
+DROP TABLE IF EXISTS INT_CHANNEL_MESSAGE ;
+DROP TABLE IF EXISTS INT_METADATA_STORE ;
+DROP SEQUENCE IF EXISTS INT_MESSAGE_SEQ ;
