@@ -67,21 +67,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 public class PostgresChannelMessageTableSubscriberTests implements PostgresContainerTest {
 
 	private static final String INTEGRATION_DB_SCRIPTS = """
-			CREATE SEQUENCE INT_MESSAGE_SEQ START WITH 1 INCREMENT BY 1 NO CYCLE;
-			^^^ END OF SCRIPT ^^^
-
-			CREATE TABLE INT_CHANNEL_MESSAGE (
-				MESSAGE_ID CHAR(36) NOT NULL,
-				GROUP_KEY CHAR(36) NOT NULL,
-				CREATED_DATE BIGINT NOT NULL,
-				MESSAGE_PRIORITY BIGINT,
-				MESSAGE_SEQUENCE BIGINT NOT NULL DEFAULT nextval('INT_MESSAGE_SEQ'),
-				MESSAGE_BYTES BYTEA,
-				REGION VARCHAR(100) NOT NULL,
-				constraint INT_CHANNEL_MESSAGE_PK primary key (REGION, GROUP_KEY, CREATED_DATE, MESSAGE_SEQUENCE)
-			);
-			^^^ END OF SCRIPT ^^^
-
 			CREATE FUNCTION INT_CHANNEL_MESSAGE_NOTIFY_FCT()
 			RETURNS TRIGGER AS
 			$BODY$
