@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 the original author or authors.
+ * Copyright 2022-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -27,14 +27,17 @@ import org.testcontainers.junit.jupiter.Testcontainers;
  * Since the Postgres container instance is shared via static property, it is going to be
  * started only once per JVM, therefore the target Docker container is reused automatically.
  *
+ * @author Artem Bilan
  * @author Rafael Winterhalter
+ * @author Johannes Edmeier
  *
  * @since 6.0
  */
 @Testcontainers(disabledWithoutDocker = true)
 public interface PostgresContainerTest {
 
-	PostgreSQLContainer<?> POSTGRES_CONTAINER = new PostgreSQLContainer<>("postgres:11");
+	PostgreSQLContainer<?> POSTGRES_CONTAINER = new PostgreSQLContainer<>("postgres:11")
+			.withInitScript("org/springframework/integration/jdbc/schema-postgresql.sql");
 
 	@BeforeAll
 	static void startContainer() {
